# genai-vanilla

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMFYUI_AUTH.md  LICENSE  README.md  SECURITY.md  docker-compose.ai-gpu.yml  docker-compose.ai-local.yml  docker-compose.dev-ollama-local.yml  docker-compose.prod-gpu.yml  docker-compose.yml  generate_supabase_keys.sh  hosts-utils.sh  start.sh  stop.sh
.audit/: findings.md
.github/: dependabot.yml
bootstrapper/: __init__.py  _run.sh  feature_flags.py  generate_supabase_keys.py  generate_supabase_keys.sh  pyproject.toml  service-configs.yml  start.py  stop.py  test_file.py  tracks.py  tracks.yml
bootstrapper/core/: __init__.py  config_parser.py  docker_manager.py  port_manager.py
bootstrapper/docs/: deps_resolver.py  deps_section_writer.py  diagram_renderer.py  merge_research.py  regen.py  research_subagent_prompt.py
bootstrapper/docs/templates/: architecture.html.tmpl  cluster.tmpl  svg_box.tmpl  svg_defs.tmpl  svg_edge.tmpl
bootstrapper/legacy_scripts/: README.md  generate_supabase_keys.sh  start.sh.original
bootstrapper/schemas/: comfyui-manifest.schema.json  comfyui-models.schema.json  models.schema.json  order.schema.json  service.schema.json  tracks.schema.json
bootstrapper/scripts/: generate_logo.py  reorg_user_env.py
bootstrapper/services/: __init__.py  dependency_manager.py  env_assembler.py  manifest_validator.py  manifests.py  sc_synthesizer.py  service_config.py  source_validator.py  topology.py
bootstrapper/services/hooks/: __init__.py  chatterbox.py  cloud_providers.py  comfyui.py  openclaw.py  speaches.py  weaviate.py
bootstrapper/services/migrations/: __init__.py  migration_v1.py  migration_v2.py  migration_v3.py
bootstrapper/tests/: conftest.py  seed_harness.py  test_airflow_compose.py  test_airflow_connection_seeding.py  test_atlas_env_file_seams.py  test_atlas_hero.py  test_atlas_hero_data.py  test_atlas_splash_logic.py  test_atlas_splash_widget.py  test_auto_managed_scale_writer.py  test_backfill_blank_values.py  test_backfill_migration_sentinel.py  test_banner_block_logo_parity.py  test_banner_brand.py  test_banner_hero.py  test_blank_base_port.py  test_brand_logo.py  test_catalog_init_auto_import.py  test_cli_safe_secret_generation.py  test_cli_validation.py  test_comfyui_catalog_merge.py  test_comfyui_catalog_types.py  test_comfyui_curated_and_fallback.py  test_comfyui_manifest_generation.py  test_comfyui_models_yaml.py  test_comfyui_resolver.py  test_comfyui_scrapers.py  test_comfyui_sidecar.py  test_comfyui_snapshot_writer.py  test_compose_nested_mounts.py  test_compose_profiles_stacking.py  test_consumers_no_db_models.py  test_credential_placeholder_rotation.py  test_default_model_steps.py  test_degraded_multiselect_keeps_saved_models.py  test_dependency_scale_blank.py  test_deps_resolver.py  test_deps_section_writer.py  test_diagram_renderer.py  test_doc_links.py  (+108 more)
bootstrapper/tests/fixtures/: comfyui_curated_snapshot.json  example_candidate.md  example_row.md  hermes.deps_section.md  llm_catalog_snapshot.json  rendered_config_baseline.yml  seed_rows_golden.txt  seed_schema_golden.sql
bootstrapper/tests/fixtures/comfyui/: civitai_models.json  custom-models-invalid.yaml  custom-models-valid.yaml  hf_text2image_search.json  hf_text2mesh_search.json  hf_text2speech_search.json  hf_text2video_search.json
bootstrapper/tools/: __init__.py  generate_architecture_diagram.py  generate_readme_topology.py  validate_fragments.py
bootstrapper/ui/: __init__.py  info_box.py  log_pane.py  log_stream_app.py  logo.py  number_widget.py  palette.py  presentation_app.py  select_widget.py  state.py  state_builder.py  status_ribbon.py  term_caps.py
bootstrapper/ui/textual/: __init__.py  integration.py  palette.py  theme.css
bootstrapper/ui/textual/assets/: atlas_hero_100.json  atlas_hero_120.json  atlas_hero_160.json  atlas_hero_60.json  atlas_hero_80.json  atlas_poster_100.json  atlas_poster_120.json  atlas_poster_160.json  atlas_poster_60.json  atlas_poster_80.json  atlas_profile_100.json  atlas_profile_120.json  atlas_profile_60.json  atlas_profile_80.json
bootstrapper/ui/textual/screens/: wizard_screen.py
bootstrapper/ui/textual/widgets/: __init__.py  atlas_hero.py  atlas_splash.py  block_logo.py  brand_header.py  category_legend.py  command_preview.py  command_summary.py  dependency_conflict.py  filter_input.py  footer_bar.py  info_box.py  log_filter_chips.py  log_pane.py  multiselect_filter_chips.py  option_row.py  prompt_panel.py  service_table.py
bootstrapper/utils/: __init__.py  banner.py  brand_logo.py  cloud_models.py  cloud_providers.py  comfyui_library.py  comfyui_manifest_generator.py  comfyui_resolver.py  comfyui_snapshot_writer.py  endpoint_vars.py  hosts_manager.py  key_generator.py  kong_config_generator.py  litellm_config_generator.py  litellm_settings.py  llm_catalog.py  localhost_validator.py  model_resolver.py  ollama_discovery.py  ollama_library.py  source_override_manager.py  supabase_keys.py  system.py
bootstrapper/utils/data/: .gitignore  comfyui_catalog_fallback.json
bootstrapper/wizard/: __init__.py  comfyui_steps.py  interactive_wizard.py  llm_steps.py  prompts.py  ray_steps.py  service_discovery.py  tui_wizard.py  ui_renderer.py
db/: Dockerfile
doc-processor/localhost/: README.md  processor.py  pyproject.toml  requirements.txt  server.py
services/docling/provider/localhost/: README.md  models.py  pyproject.toml  requirements.txt  server.py  utils.py
tts-provider/localhost/: README.md  pyproject.toml  requirements.txt  server.py
(+597 files in other folders)
