[project]
name = "genai-bootstrapper"
version = "1.0.0"
description = "GenAI Vanilla Stack bootstrapper - cross-platform startup and management scripts"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",           # YAML parsing (replaces yq)
    "python-dotenv>=1.2.2",  # .env file handling — floor bumped to clear CVE-2026-28684 (set_key symlink-follow)
    "rich>=13.0.0",          # Terminal colors, tables, formatting
    "click>=8.1.0",          # CLI argument parsing
    "docker>=7.0.0",         # Docker SDK for compose operations
    "textual>=0.85",         # TUI framework — owns the wizard, launch, and streaming-logs flows
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []