[project]
name = "genai-bootstrapper"
version = "1.0.0"
description = "GenAI Vanilla Stack bootstrapper - cross-platform startup and management scripts"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",           # YAML parsing (replaces yq)
    "rich>=13.0.0",          # Terminal colors, tables, formatting
    "click>=8.1.0",          # CLI argument parsing
    "requests>=2.32.0",      # HF + civitai catalog HTTP scraping
    "urllib3>=2.7.0",        # Explicit floor (transitive via requests) — clears CVE-2026-44431/44432
    "textual>=0.85",         # TUI framework — owns the wizard, launch, and streaming-logs flows
    "jsonschema>=4.0.0",     # Validates services/<name>/service.yml against bootstrapper/schemas/*
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Bootstrapper modules import as bare names (e.g. `from core.config_parser import ConfigParser`);
# adding the package root keeps that style working under pytest.
pythonpath = ["."]