[project]
name = "genai-doc-processor-localhost"
version = "1.0.0"
description = "GenAI Vanilla Stack - Docling Document Processor localhost server"
requires-python = ">=3.10"
dependencies = [
    "docling==2.18.0",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
