[project]
name = "genai-tts-provider-localhost"
version = "1.0.0"
description = "GenAI Vanilla Stack - XTTS v2 TTS localhost server (openedai-speech wrapper)"
requires-python = ">=3.10"
dependencies = [
    # Note: openedai-speech is not a PyPI package
    # It will be cloned from GitHub during setup
    # These are the dependencies needed to run it:
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "loguru>=0.7.0",
    "piper-tts>=1.2.0",
    "TTS>=0.22.0",
    "langdetect>=1.0.9",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # Use flexible numpy version to avoid conflicts with TTS
    "numpy>=1.22.0,<2.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # Pin transformers for XTTS v2 compatibility (BeamSearchScorer import)
    "transformers>=4.40.2,<4.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
