[project]
name = "atlas-doc-processor-localhost"
version = "1.0.0"
description = "Atlas - Docling Document Processor localhost server"
requires-python = ">=3.10"
dependencies = [
    "docling==2.102.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.27",
    "pydantic>=2.10.6",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
